--- a/plots/lasso_regression.tex
+++ b/plots/lasso_regression.tex
@@ -26,30 +26,30 @@
 
 \begin{document}
 \begin{tikzpicture}% table
-    \begin{axis}[xlabel={Cumulative oracle calls},ylabel=$f(x_k)$, ymode=log,
-				 enlargelimits=false, ymin=1e-16, ymax=1.0,
+    \begin{axis}[xlabel={Cumulative oracle calls}, ylabel=$f(x_k)$, ymode=log,
+				 enlargelimits=false, ymax=1.0, xmax=4000,
          legend cell align=left, legend pos=north east,
-				 legend style={nodes={scale=0.75, transform shape}},
-         legend entries={{$(d,k)=(250,5)$}, {$(d,k)=(500,10)$}, {$(d,k)=(1000,20)$},
+				 legend style={nodes={scale=1.0, transform shape}},
+         legend entries={{$(d,k)=(100,1)$}, {$(d,k)=(500, 5)$}, {$(d,k)=(1000,10)$},
                          {\texttt{SuperPolyak}},
-                         {Alternating Projections}}]
+                         {Proximal Gradient}}]
   \addlegendimage{mark=*, very thick, color=lblue};
   \addlegendimage{mark=square*, very thick, color=mblue};
   \addlegendimage{mark=triangle*, very thick, color=hblue};
   \addlegendimage{no markers, very thick, solid};
   \addlegendimage{no markers, very thick, dashed};
 	\addplot[mark=*, very thick, color=lblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
-    {./compressed_sensing_50_250_5_bundle.csv};
+    {./lasso_10_100_1_bundle.csv};
 	\addplot[no markers, very thick, dashed, color=lblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
-    {./compressed_sensing_50_250_5_vanilla.csv};
+    {./lasso_10_100_1_vanilla.csv};
   \addplot[mark=square*, very thick, color=mblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
-    {./compressed_sensing_100_500_10_bundle.csv};
+    {./lasso_50_500_5_bundle.csv};
   \addplot[no markers, very thick, dashed, color=mblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
-    {./compressed_sensing_100_500_10_vanilla.csv};
+    {./lasso_50_500_5_vanilla.csv};
   \addplot[mark=triangle*, very thick, color=hblue] table[x=cumul_oracle_calls,y=fvals, col sep=comma]
-    {./compressed_sensing_200_1000_20_bundle.csv};
+    {./lasso_100_1000_10_bundle.csv};
   \addplot[no markers, very thick, dashed, color=hblue] table[x=cumul_oracle_calls,y=fvals, col sep=comma]
-    {./compressed_sensing_200_1000_20_vanilla.csv};
+    {./lasso_100_1000_10_vanilla.csv};
 	\end{axis}
 \end{tikzpicture}
 \end{document}
