--- a/plots/quadratic_sensing_r_2.tex
+++ b/plots/quadratic_sensing_r_2.tex
@@ -26,10 +26,11 @@
 \begin{document}
 \begin{tikzpicture}% table
     \begin{axis}[xlabel={Cumulative oracle calls},ylabel=$f(x_k)$, ymode=log,
-				 enlargelimits=false, ymin=1e-15, ymax=1.1,
+				 enlargelimits=false, ymin=1e-15,
+         title={\textbf{Quadratic sensing} ($r=2$)},
          legend cell align=left, legend pos=north east,
 				 legend style={nodes={scale=1.0, transform shape}},
-         legend entries={{$d=100$}, {$d=250$}, {$d=500$},
+         legend entries={{$d=75$}, {$d=150$}, {$d=300$},
                          {\texttt{SuperPolyak}},
                          {\texttt{PolyakSGM}}}]
   \addlegendimage{mark=*, very thick, color=lblue};
@@ -38,17 +39,17 @@
   \addlegendimage{no markers, very thick, solid};
   \addlegendimage{no markers, very thick, dashed};
 	\addplot[mark=*, very thick, color=lblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
-    {./general_bilinear_sensing_600_100_2_bundle_amortized.csv};
+    {./quadratic_sensing_300_75_2_bundle.csv};
 	\addplot[no markers, very thick, dashed, color=lblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
-    {./general_bilinear_sensing_600_100_2_polyak_amortized.csv};
+    {./quadratic_sensing_300_75_2_polyak.csv};
   \addplot[mark=square*, very thick, color=mblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
-    {./general_bilinear_sensing_1500_250_2_bundle_amortized.csv};
+    {./quadratic_sensing_600_150_2_bundle.csv};
   \addplot[no markers, very thick, dashed, color=mblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
-    {./general_bilinear_sensing_1500_250_2_polyak_amortized.csv};
+    {./quadratic_sensing_600_150_2_polyak.csv};
   \addplot[mark=triangle*, very thick, color=hblue] table[x=cumul_oracle_calls,y=fvals, col sep=comma]
-    {./general_bilinear_sensing_3000_500_2_bundle_amortized.csv};
+    {./quadratic_sensing_1200_300_2_bundle.csv};
   \addplot[no markers, very thick, dashed, color=hblue] table[x=cumul_oracle_calls,y=fvals, col sep=comma]
-    {./general_bilinear_sensing_3000_500_2_polyak_amortized.csv};
+    {./quadratic_sensing_1200_300_2_polyak.csv};
 	\end{axis}
 \end{tikzpicture}
 \end{document}
