--- a/plots/quadratic_sensing_r_4.tex
+++ b/plots/quadratic_sensing_r_4.tex
@@ -27,9 +27,10 @@
 \begin{tikzpicture}% table
     \begin{axis}[xlabel={Cumulative oracle calls},ylabel=$f(x_k)$, ymode=log,
 				 enlargelimits=false, ymin=1e-15,
+         title={\textbf{Quadratic sensing} ($r=4$)},
          legend cell align=left, legend pos=north east,
 				 legend style={nodes={scale=1.0, transform shape}},
-         legend entries={{$d=100$}, {$d=250$}, {$d=500$},
+         legend entries={{$d=75$}, {$d=150$}, {$d=300$},
                          {\texttt{SuperPolyak}},
                          {\texttt{PolyakSGM}}}]
   \addlegendimage{mark=*, very thick, color=lblue};
@@ -38,17 +39,17 @@
   \addlegendimage{no markers, very thick, solid};
   \addlegendimage{no markers, very thick, dashed};
 	\addplot[mark=*, very thick, color=lblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
-    {./quadratic_sensing_600_100_2_bundle.csv};
+    {./quadratic_sensing_600_75_4_bundle.csv};
 	\addplot[no markers, very thick, dashed, color=lblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
-    {./quadratic_sensing_600_100_2_polyak.csv};
+    {./quadratic_sensing_600_75_4_polyak.csv};
   \addplot[mark=square*, very thick, color=mblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
-    {./quadratic_sensing_1500_250_2_bundle.csv};
+    {./quadratic_sensing_1200_150_4_bundle.csv};
   \addplot[no markers, very thick, dashed, color=mblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
-    {./quadratic_sensing_1500_250_2_polyak.csv};
+    {./quadratic_sensing_1200_150_4_polyak.csv};
   \addplot[mark=triangle*, very thick, color=hblue] table[x=cumul_oracle_calls,y=fvals, col sep=comma]
-    {./quadratic_sensing_3000_500_2_bundle.csv};
+    {./quadratic_sensing_2400_300_4_bundle.csv};
   \addplot[no markers, very thick, dashed, color=hblue] table[x=cumul_oracle_calls,y=fvals, col sep=comma]
-    {./quadratic_sensing_3000_500_2_polyak.csv};
+    {./quadratic_sensing_2400_300_4_polyak.csv};
 	\end{axis}
 \end{tikzpicture}
 \end{document}
