Cleanup, update plots

--- a/plots/compressed_sensing.tex
+++ b/plots/compressed_sensing.tex
@@ -30,7 +30,7 @@
 				 enlargelimits=false, ymin=1e-16, ymax=1.0,
          legend cell align=left, legend pos=north east,
 				 legend style={nodes={scale=0.75, transform shape}},
-         legend entries={{$(d,k)=(250,5)$}, {$(d,k)=(500,10)$}, {$(d,k)=(1000,20)$},
+         legend entries={{$(d,s)=(250,5)$}, {$(d,s)=(500,10)$}, {$(d,s)=(1000,20)$},
                          {\texttt{SuperPolyak}},
                          {Alternating Projections}}]
   \addlegendimage{mark=*, very thick, color=lblue};
