--- a/plots/max_linear_regression_d_100.tex
+++ b/plots/max_linear_regression_d_100.tex
@@ -27,26 +27,26 @@
 \begin{document}
 \begin{tikzpicture}% table
     \begin{axis}[xlabel={Cumulative oracle calls},ylabel=$f(x_k)$, ymode=log,
-				 enlargelimits=false, ymin=1e-16, ymax=2.0, xmax=1000,
+				 enlargelimits=false, ymin=1e-16, ymax=2.0, xmax=800,
          legend cell align=left, legend pos=north east,
-				 legend style={nodes={scale=0.8, transform shape}},
+				 legend style={nodes={scale=1.0, transform shape}},
          legend entries={{$r=2$}, {$r=4$}, {$r=8$},
                          {\texttt{SuperPolyak}},
                          {\texttt{PolyakSGM}}}]
-  \addlegendimage{mark=o, very thick, color=lblue};
-  \addlegendimage{mark=square, very thick, color=mblue};
-  \addlegendimage{mark=triangle, very thick, color=hblue};
+  \addlegendimage{mark=*, very thick, color=lblue};
+  \addlegendimage{mark=square*, very thick, color=mblue};
+  \addlegendimage{mark=triangle*, very thick, color=hblue};
   \addlegendimage{no markers, very thick, solid};
   \addlegendimage{no markers, very thick, dashed};
-	\addplot[mark=o, very thick, color=lblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
+	\addplot[mark=*, very thick, color=lblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
     {./max_linear_regression_800_100_2_bundle.csv};
 	\addplot[no markers, very thick, dashed, color=lblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
     {./max_linear_regression_800_100_2_polyak.csv};
-  \addplot[mark=square, very thick, color=mblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
+  \addplot[mark=square*, very thick, color=mblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
     {./max_linear_regression_1600_100_4_bundle.csv};
   \addplot[no markers, very thick, dashed, color=mblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
     {./max_linear_regression_1600_100_4_polyak.csv};
-  \addplot[mark=triangle, very thick, color=hblue] table[x=cumul_oracle_calls,y=fvals, col sep=comma]
+  \addplot[mark=triangle*, very thick, color=hblue] table[x=cumul_oracle_calls,y=fvals, col sep=comma]
     {./max_linear_regression_3200_100_8_bundle.csv};
   \addplot[no markers, very thick, dashed, color=hblue] table[x=cumul_oracle_calls,y=fvals, col sep=comma]
     {./max_linear_regression_3200_100_8_polyak.csv};
