--- a/plots/quadratic_sensing_time.tex
+++ b/plots/quadratic_sensing_time.tex
@@ -1,7 +1,7 @@
 \documentclass{standalone}
 
 % Generate convergence plots using PGFplots and the measurements in .csv format
-% Expected format: .csv with columns named `t`, `fvals`, and `cumul_oracle_calls`.
+% Expected format: .csv with columns named `t`, `fvals`, and `cumul_elapsed_time`.
 % Columns should be comma-separated.
 % Expected filename: `compressed_sensing_$(m)_$(d)_$(k)_{bundle,polyak.csv}`, where:
 %   1) $(m) is number of measurements;
@@ -26,31 +26,31 @@
 
 \begin{document}
 \begin{tikzpicture}% table
-    \begin{axis}[xlabel={Cumulative oracle calls},ylabel=$f(x_k)$, ymode=log,
+  \begin{axis}[xlabel={Time (s)},ylabel=$f(x_k)$, ymode=log,
                  width=3.5in, height=3in,
                  enlargelimits=false,
                  legend cell align=left, legend pos=north east,
                  legend style={nodes={scale=1.0, transform shape}},
-                 legend entries={{$s=10$}, {$s=25$}, {$s=50$},
+                 legend entries={{$(d, r) = (500, 10)$}, {$(d, r) = (1000, 5)$}, {$(d, r) = (2500, 2)$},
                                  {\texttt{SuperPolyak}},
-                                 {Alt. Projections}}]
+                                 {\texttt{PolyakSGM}}}]
   \addlegendimage{mark=*, very thick, color=lblue};
   \addlegendimage{mark=square*, very thick, color=mblue};
   \addlegendimage{mark=triangle*, very thick, color=hblue};
   \addlegendimage{no markers, very thick, solid};
   \addlegendimage{no markers, very thick, dashed};
-	\addplot[mark=*, very thick, color=lblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
-    {./compressed_sensing_100_1000_10_bundle.csv};
-	\addplot[no markers, very thick, dashed, color=lblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
-    {./compressed_sensing_100_1000_10_vanilla.csv};
-  \addplot[mark=square*, very thick, color=mblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
-    {./compressed_sensing_250_2500_25_bundle.csv};
-  \addplot[no markers, very thick, dashed, color=mblue] table[x=cumul_oracle_calls,y=fvals,col sep=comma]
-    {./compressed_sensing_250_2500_25_vanilla.csv};
-  \addplot[mark=triangle*, very thick, color=hblue] table[x=cumul_oracle_calls,y=fvals, col sep=comma]
-    {./compressed_sensing_500_5000_50_bundle.csv};
-  \addplot[no markers, very thick, dashed, color=hblue] table[x=cumul_oracle_calls,y=fvals, col sep=comma]
-    {./compressed_sensing_500_5000_50_vanilla.csv};
+	\addplot[mark=*, very thick, color=lblue] table[x=cumul_elapsed_time,y=fvals,col sep=comma]
+    {./quadratic_sensing_15000_500_10_bundle.csv};
+	\addplot[no markers, very thick, dashed, color=lblue] table[x=cumul_elapsed_time,y=fvals,col sep=comma]
+    {./quadratic_sensing_15000_500_10_polyak.csv};
+  \addplot[mark=square*, very thick, color=mblue] table[x=cumul_elapsed_time,y=fvals,col sep=comma]
+    {./quadratic_sensing_15000_1000_5_bundle.csv};
+  \addplot[no markers, very thick, dashed, color=mblue] table[x=cumul_elapsed_time,y=fvals,col sep=comma]
+    {./quadratic_sensing_15000_1000_5_polyak.csv};
+  \addplot[mark=triangle*, very thick, color=hblue] table[x=cumul_elapsed_time,y=fvals, col sep=comma]
+    {./quadratic_sensing_15000_2500_2_bundle.csv};
+  \addplot[no markers, very thick, dashed, color=hblue] table[x=cumul_elapsed_time,y=fvals, col sep=comma]
+    {./quadratic_sensing_15000_2500_2_polyak.csv};
 	\end{axis}
 \end{tikzpicture}
 \end{document}
