--- a/plots/robust_pca_ranks.tex
+++ b/plots/robust_pca_ranks.tex
@@ -31,7 +31,7 @@
 				 legend style={nodes={scale=1.0, transform shape}},
          legend entries={{$r = 10$}, {$r = 25$}, {$r = 50$},
                          {\texttt{SuperPolyak}},
-                         {\texttt{PolyakSGM}}}]
+                         {Alt. Projections}}]
   \addlegendimage{mark=*, very thick, color=lblue};
   \addlegendimage{mark=square*, very thick, color=mblue};
   \addlegendimage{mark=triangle*, very thick, color=hblue};
