--- a/plots/robust_pca.tex
+++ b/plots/robust_pca.tex
@@ -31,7 +31,7 @@
 				 legend style={nodes={scale=1.0, transform shape}},
          legend entries={{$\alpha = 0.1$}, {$\alpha = 0.2$}, {$\alpha = 0.3$}, {$\alpha = 0.4$},
                          {\texttt{SuperPolyak}},
-                         {\texttt{PolyakSGM}}}]
+                         {Alt. Projections}}]
   \addlegendimage{mark=*, very thick, color=lblue};
   \addlegendimage{mark=square*, very thick, color=mblue};
   \addlegendimage{mark=triangle*, very thick, color=hblue};
