--- a/plots/phase_retrieval.tex
+++ b/plots/phase_retrieval.tex
@@ -25,7 +25,7 @@
 
 \begin{document}
 \begin{tikzpicture}% table
-    \begin{axis}[xlabel={Cumulative oracle calls},ylabel=$f(x_k)$, ymode=log,
+    \begin{axis}[xlabel={Cumulative oracle calls},ylabel=$f(x_k) - f^*$, ymode=log,
 				 enlargelimits=false, width=3.5in, height=3in,
          legend cell align=left, legend pos=north east,
 				 legend style={nodes={scale=1.0, transform shape}},
