--- a/plots/quadratic_sensing_time.tex
+++ b/plots/quadratic_sensing_time.tex
@@ -26,7 +26,7 @@
 
 \begin{document}
 \begin{tikzpicture}% table
-  \begin{axis}[xlabel={Time (s)},ylabel=$f(x_k)$, ymode=log,
+  \begin{axis}[xlabel={Time (s)},ylabel=$f(x_k) - f^*$, ymode=log,
                  width=3.5in, height=3in,
                  enlargelimits=false,
                  legend cell align=left, legend pos=north east,
